chore: working setup sections and demos

--- a/examples/usage/Slides.ipynb
+++ b/examples/usage/Slides.ipynb
@@ -645,18 +645,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15ad6a5d-2d88-4778-ab5c-3d0a154a7149",
+   "cell_type": "markdown",
+   "id": "6b448d91-bc06-493b-bb62-621384025639",
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Linters/code formatters\n",
+    "* Linters and code formatters are great!\n",
+    "* Don't worry about how your code looks (tabs vs spaces,  Multiline formatting, etc).  The linter takes care of this for you.\n",
+    "* The defacto code formatting standards *were*:\n",
+    "  - [Black](https://github.com/psf/black)\n",
+    "  - [flake8](https://flake8.pycqa.org/en/latest/)\n",
+    "* But the new standard is [ruff](https://docs.astral.sh/ruff/)\n",
+    "* There are linters/formatters for just about everything\n",
+    "* Make them a part of your workflow using [pre-commit](https://pre-commit.com/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c1efb0b-95c9-430e-9e6f-1de23bbfc127",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Using templates\n",
+    "* When starting a new project (not just python, but also latex, data project, etc), consider using:\n",
+    "  - [cookiecutter](https://cookiecutter.readthedocs.io/en/stable/)\n",
+    "  - [cruft](https://github.com/cruft/cruft)\n",
+    "  - [copier](https://copier.readthedocs.io/en/stable/)\n",
+    "* I use my own template [cookiecutter-nist-python](https://github.com/usnistgov/cookiecutter-nist-python) with cruft\n",
+    "```bash\n",
+    "cruft create --checkout develop https://github.com/usnistgov/cookiecutter-nist-python.git\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2e5f75-ce7b-4361-90d6-24c76b1815f0",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Testing across python version\n",
+    "\n",
+    "* Use [nox](https://nox.thea.codes/en/stable/) or [tox](https://tox.wiki/en/4.24.1/)\n",
+    "* I personally use nox, because it uses python script as the config file.  Makes extending to do new/interesting things easy\n",
+    "* `tox` is very powerful.  It uses config files for setup.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad7f1002-24c8-4266-aa51-85e046f0211a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Managing tooling\n",
+    "* There are a host of python tools we've discussed already (formatters, pre-commit, cookiecutter/cruft/copier)\n",
+    "* How do you interact with these?\n",
+    "* Recommend using `uv tool install` and/or `uv tool run`, or equivalently, `uvx` (see [here](https://docs.astral.sh/uv/concepts/tools/))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55d90d7c-0c65-4d5a-b916-d0f03c31940a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Running scripts with `uv`\n",
+    "* If you have one off python scripts, you don't need an environment at all!\n",
+    "* Simply use `uv script`"
+   ]
   }
  ],
  "metadata": {
