--- a/examples/usage/demo.ipynb
+++ b/examples/usage/demo.ipynb
@@ -9,40 +9,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_packaging_tools import example_function\n",
-    "\n",
-    "a = 1\n",
-    "b = 2\n",
-    "example_function(a, b)"
+    "from python_packaging_tools import calculate_effective_density"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example of using a notebook to build documentation.  See for example {meth}`~python_packaging_tools.example_function`"
+    "This is an example of using a notebook to build documentation.  See for example {meth}`~python_packaging_tools.calculate_effective_density`"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5237753242357204"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "Note\n",
-    "\n",
-    "This is a note!\n",
-    "\n",
-    "</div>"
+    "calculate_effective_density(12, 6, 1.0, 0.5)"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Edit Metadata",
+  "kernelspec": {
+   "display_name": "Python [venv: python-packaging-tools-dev]",
+   "language": "python",
+   "name": "python-packaging-tools-dev"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -53,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.12.9"
   },
   "toc": {
    "base_numbering": 1,
