chore: update slides

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -791,6 +791,37 @@
     "* If you have one off python scripts, you don't need an environment at all!\n",
     "* Simply use `uv script`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e66ba7-933b-4bf6-9bbd-33b565f1a50f",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Use a good editor\n",
+    "\n",
+    "* If you don't have strong opinions, it's probably best to use vscode\n",
+    "* Regardless, try to use language server like pyright"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23defcfb-177a-4290-b052-cbda027c7366",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
