chore: update slides

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -789,7 +789,7 @@
    "source": [
     "# Running scripts with `uv`\n",
     "* If you have one off python scripts, you don't need an environment at all!\n",
-    "* Simply use `uv script`"
+    "* Simply use `uv run {script}` (see [here](https://docs.astral.sh/uv/guides/scripts/))"
    ]
   },
   {
@@ -808,20 +808,6 @@
     "* If you don't have strong opinions, it's probably best to use vscode\n",
     "* Regardless, try to use language server like pyright"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23defcfb-177a-4290-b052-cbda027c7366",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
