chore: now using second virial for demo

--- a/examples/usage/demo.ipynb
+++ b/examples/usage/demo.ipynb
@@ -9,38 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_packaging_tools import calculate_effective_density"
+    "from python_packaging_tools import calculate_virial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example of using a notebook to build documentation.  See for example {meth}`~python_packaging_tools.calculate_effective_density`"
+    "This is an example of using a notebook to build documentation.  See for example {meth}`~python_packaging_tools.calculate_virial`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5237753242357204"
+       "-6.4526623819894455"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_effective_density(12, 6, 1.0, 0.5)"
+    "calculate_virial(sig=1.0, eps=-1.0, lam=1.5, temp=1.0)"
    ]
   }
  ],
