--- a/slides/calculation-package.ipynb
+++ b/slides/calculation-package.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "60f7247c-1182-4ef0-b1e1-c0218c463f25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from python_packaging_tools import calculate_virial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5b9e446-3a82-4e2b-8d2d-a0c8d1081369",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "4  1.0 -1.0  0.5   1.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +102,6 @@
    "source": [
     "data = pd.read_csv(\"../examples/data/params.csv\")\n",
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f3726ac2-2d83-4bed-b10c-98f38920ccb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_virial(sig, eps, lam, temp):\n",
-    "    return 2 * np.pi / 3.0 * sig**3 * (1.0 + (1 - np.exp(-eps / temp)) * (lam**3 - 1.0))"
    ]
   },
   {
@@ -130,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c1a5c27e-c23c-4197-afcb-6d205e981387",
    "metadata": {},
    "outputs": [
@@ -279,7 +269,7 @@
        "11  1.0 -1.0  2.0   2.0  -7.416355"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,9 +289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-python-packaging-tools-example-dev]",
+   "display_name": "Python [venv: python-packaging-tools-dev]",
    "language": "python",
-   "name": "conda-env-.conda-python-packaging-tools-example-dev-py"
+   "name": "python-packaging-tools-dev"
   },
   "language_info": {
    "codemirror_mode": {
