chore: now using second virial for demo

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -801,7 +801,7 @@
    },
    "outputs": [],
    "source": [
-    "!uvx --from=\"git+https://github.com/wpk-nist-gov/python-packaging-tools.git\"  sw-second-virial params.csv"
+    "!uvx --from=\"git+https://github.com/wpk-nist-gov/python-packaging-tools.git\"  sw-second-virial examples/data/params.csv"
    ]
   },
   {
