chore: update slides

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4c280a54-e069-48e5-8815-adbcfb68d307",
    "metadata": {
     "editable": true,
@@ -799,9 +799,30 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 12/12 [00:00<00:00, 8119.32it/s]                 \u001b[0m\n",
+      "    sig  eps  lam  temp   dens_eff\n",
+      "0   1.0 -1.0  0.1   0.5  15.462222\n",
+      "1   1.0 -1.0  0.1   1.0   5.689557\n",
+      "2   1.0 -1.0  0.1   2.0   3.451715\n",
+      "3   1.0 -1.0  0.5   0.5  13.802952\n",
+      "4   1.0 -1.0  0.5   1.0   5.243311\n",
+      "5   1.0 -1.0  0.5   2.0   3.283239\n",
+      "6   1.0 -1.0  1.0   0.5   2.094395\n",
+      "7   1.0 -1.0  1.0   1.0   2.094395\n",
+      "8   1.0 -1.0  1.0   2.0   2.094395\n",
+      "9   1.0 -1.0  2.0   0.5 -91.574060\n",
+      "10  1.0 -1.0  2.0   1.0 -23.096932\n",
+      "11  1.0 -1.0  2.0   2.0  -7.416355\n"
+     ]
+    }
+   ],
    "source": [
-    "!uvx --from=\"git+https://github.com/wpk-nist-gov/python-packaging-tools.git\"  sw-second-virial examples/data/params.csv"
+    "!uvx --from=\"git+https://github.com/wpk-nist-gov/python-packaging-tools.git@develop\"  sw-second-virial ../examples/data/params.csv"
    ]
   },
   {
