chore: update slides

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -610,15 +610,15 @@
     "# An alternative way to create environments\n",
     "* There's a different type of python environment: virtual environments\n",
     "* These use an already installed version of python, and use symlinks.\n",
-    "* Downside is that they can break if the python install linked against changes\n",
-    "* Plus is that they are very small, and very fast.\n",
-    "* Previously, you'd need to use something like `pyenv`, `brew`, etc to manage your python version\n",
+    "* Downside is that they can break if the python linked against changes\n",
+    "* Plus side: they are very small, and very fast.\n",
+    "* Previously, you'd need to use something like `pyenv`, `brew`, or `conda` to manage your python version\n",
     "* Now, there is a one stop shop, [uv](https://docs.astral.sh/uv/) to handle virtual environments (and much more)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45803a4d-2ab1-4ef1-bb6c-b2f0890bca32",
+   "id": "9755bcc1-6535-40c2-a487-c4780cc27688",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -627,13 +627,17 @@
     "tags": []
    },
    "source": [
-    "# Better still, use `uv lock`\n",
+    "# uv - the new and awesome python manager\n",
     "\n",
-    "* `uv` is setup to be a package manage for python package development\n",
-    "* Create package repo (`uv init ...`)\n",
+    "* Create python viritual env (`uv venv ...`)\n",
+    "* Manage python versions (`uv python ...`)\n",
+    "* Create a python project (`uv init ...`)\n",
     "* Add dependencies (`uv add ...`)\n",
-    "* Lock dependencies (`uv lock ...` and `uv sync ..`)\n",
-    "* Run commands (`uv run ...`)"
+    "* Pip replacement (`uv pip ...`)\n",
+    "* Lock dependencies (`uv pip compile ...`)\n",
+    "* Run commands (`uv run ...`)\n",
+    "* Manage python tools (`uv tool ...` or `uvx ..`)\n",
+    "* Full project management (`uv lock ..` `uv sync ..`)"
    ]
   },
   {
@@ -852,11 +856,28 @@
     "tags": []
    },
    "source": [
-    "# Use a good editor\n",
+    "# Use a good editor and consider typed python\n",
     "\n",
     "* If you don't have strong opinions, it's probably best to use vscode\n",
-    "* Regardless, try to use language server like pyright"
+    "* Regardless, try to use language server like pyright\n",
+    "* Typing (adding type annotations) allows for better code completion\n",
+    "* It is great for checking code consistency and catching errors\n",
+    "* I use mypy and pyright to check my code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a88e7b08-30e8-4293-827a-47451aac2626",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
