chore: update slides

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -842,6 +842,7 @@
    "source": [
     "# Running scripts with `uv`\n",
     "* If you have one off python scripts, you don't need an environment at all!\n",
+    "* Can add script dependencies to script using [PEP 723](https://peps.python.org/pep-0723/) syntax.\n",
     "* Simply use `uv run {script}` (see [here](https://docs.astral.sh/uv/guides/scripts/))"
    ]
   },
@@ -866,9 +867,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c066cb2f-901b-412c-95d8-380371e91482",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "# Keep a changelog\n",
+    "\n",
+    "* I'm not always great about this\n",
+    "* There are tools to make this simpler\n",
+    "* I use [scriv](https://github.com/nedbat/scriv) to manage changelog snippets\n",
+    "* If you use [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/), tooling can extract changelog from commit history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88e7b08-30e8-4293-827a-47451aac2626",
+   "id": "ecdda6fc-1d76-49f5-b1f6-378049c51602",
    "metadata": {
     "editable": true,
     "slideshow": {
